[package]
name = "hs2js"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
